# PinConnect

./: AGENTS.md  README.md
docs/: README.md  concepts.md  getting-started.md  pinout-design.md
docs/pinout-embed/: mkdocs-zensical.md
docs/pinout-gen/: board-toml.md  connector-types.md  generating-html.md  install.md  themes.md
pinout_design/: README.md  index.html  symbols.json
pinout_design/connectors/: HDR-127.json  HDR-200.json  HDR-254.json  MX-F-1R.json  MX-F-2R.json  PH-F.json  SHERLOCK-F.json  ST-254.json  ST-508.json  ST-BR-508.json  ST-BR-950.json  USB-C.json  XH-F.json  XT30-2+2.json  button.json  index.json  slide-switch.json
pinout_design/css/: style.css
pinout_design/js/: board-model.js  board-panel.js  connector-panel.js  editor-panel.js  main.js  state.js  svg-renderer.js  toml-io.js
pinout_design/themes/: index.json
pinout_design/tools/: bundle-deps.mjs  convert-connectors.py  package.json
pinout_embed/: README.md  pinout_embed.py  pyproject.toml
pinout_gen/: README.md  example.toml  pyproject.toml
pinout_gen/connectors/: XH-F.toml  XT30-2+2.toml
pinout_gen/pinout_gen/: cli.py  config.py  renderer.py  symbols.py
pinout_gen/pinout_gen/connectors/: HDR-127.toml  HDR-200.toml  HDR-254.toml  MX-F-1R.toml  MX-F-2R.toml  OA.toml  PH-F.toml  SHERLOCK-F.toml  ST-254.toml  ST-508.toml  ST-BR-508.toml  ST-BR-950.toml  ST-OA.toml  USB-C.toml  button.toml  slide-switch.toml
pinout_gen/pinout_gen/themes/: default.toml  midnight.toml  ocean.toml  slate.toml  terminal.toml
tools/connector-gallery/: README.md  generate.py
(+6 files in other folders)
