[project]
name = "pinout-gen"
version = "0.1.2"
description = "Interactive pinout diagram generator for documentation sites"
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]
readme = "README.md"
license = "GPL-3.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
pinout-gen = "pinout_gen.cli:main"

[project.optional-dependencies]
extension = ["markdown>=3.4"]

[tool.setuptools]
packages = ["pinout_gen"]
